--- a/apertium-tools/apertium-html-tools/assets/css/style.css
+++ b/apertium-tools/apertium-html-tools/assets/css/style.css
@@ -1,63 +1,60 @@
-#translationTest{
-	border:1px solid whiteSmoke;
-	background-color:whiteSmoke;
-	color:#333;
-	padding:8px 5px;
-	margin:auto;
-	float:right;
-	width:300px;
-	height:180px;
+#translationTest {
+    border: 1px solid whiteSmoke;
+    background-color: whiteSmoke;
+    color: #333;
+    padding: 8px 5px;
+    margin: auto;
+    float: right;
+    width: 300px;
+    height: 180px;
 }
 
-#inputBox textarea{
-	width:300px;
-	min-height:200px;
-	float:left;
-	font-family:arial;
-	border: 1px solid #D9D9D9;
-	border-top: 1px solid silver;
-	position: relative;
-	overflow: hidden;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	resize:none;
-	z-index=-1;
+#inputBox textarea {
+    width: 300px;
+    min-height: 200px;
+    float: left;
+    font-family: arial;
+    border: 1px solid #D9D9D9;
+    border-top: 1px solid silver;
+    position: relative;
+    overflow: hidden;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    resize: none;
+    z-index=-1;
 }
 
-#inputBox textarea:focus{
-	-webkit-box-shadow: inset 0px 1px 2px rgba(0,0,0, 0.3);
-	-moz-box-shadow: inset 0px 1px 2px rgba(0,0,0, 0.3);
-	-box-shadow: inset 0px 1px 2px rgba(0,0,0, 0.3);
-	outline:none;
-	border:1px solid #4d90fe
+#inputBox textarea:focus {
+    -webkit-box-shadow: inset 0px 1px 2px rgba(0,0,0, 0.3);
+    -moz-box-shadow: inset 0px 1px 2px rgba(0,0,0, 0.3);
+    -box-shadow: inset 0px 1px 2px rgba(0,0,0, 0.3);
+    outline: none;
+    border: 1px solid #4d90fe;
 }
 
-#wrap{
-	width:620px;
-	margin: auto;
+#wrap {
+    width: 620px;
+    margin: auto;
 }
 
 .translate_btn {
-	text-align: center;
-	text-decoration: none !important;
-	-moz-user-select: none;
-	-webkit-user-select: none;
-	
-	position:absolute;
-	margin:-85px 204px;
-	padding:8px 19px !important;
+    text-align: center;
+    text-decoration: none !important;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    position: absolute;
+    margin: -70px 220px;
+    padding: 8px 19px !important;
 }
 
 .left-part {
-    text-align: right; 
-}
-
-.nav li.active {
-    text-decoration: underline;
+    text-align: right;
 }
 
 #loading-indicator {
+    display: none;
+    z-index: 10000;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -65,4 +62,15 @@
 
 .modeContainer {
     display: none;
+}
+
+#localeSelect {
+    font-size: 14px;
+    margin-top: 7px;
+    margin-bottom: 5px;
+    height: 25px;
+}
+
+.tagline {
+    color: rgb(255, 255, 255);
 }
