--- a/trunk/apertium-tools/apertium-html-tools/assets/css/style.css
+++ b/trunk/apertium-tools/apertium-html-tools/assets/css/style.css
@@ -1,53 +1,3 @@
-#translationTest {
-    border: 1px solid whiteSmoke;
-    background-color: whiteSmoke;
-    color: #333;
-    padding: 8px 5px;
-    margin: auto;
-    float: right;
-    width: 300px;
-    height: 180px;
-}
-
-#inputBox textarea {
-    width: 300px;
-    min-height: 200px;
-    float: left;
-    font-family: arial;
-    border: 1px solid #D9D9D9;
-    border-top: 1px solid silver;
-    position: relative;
-    overflow: hidden;
-    box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    resize: none;
-    z-index=-1;
-}
-
-#inputBox textarea:focus {
-    -webkit-box-shadow: inset 0px 1px 2px rgba(0,0,0, 0.3);
-    -moz-box-shadow: inset 0px 1px 2px rgba(0,0,0, 0.3);
-    -box-shadow: inset 0px 1px 2px rgba(0,0,0, 0.3);
-    outline: none;
-    border: 1px solid #4d90fe;
-}
-
-#wrap {
-    width: 620px;
-    margin: auto;
-}
-
-.translate_btn {
-    text-align: center;
-    text-decoration: none !important;
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    position: absolute;
-    margin: -70px 220px;
-    padding: 8px 19px !important;
-}
-
 .left-part {
     text-align: right;
 }
@@ -73,4 +23,31 @@
 
 .tagline {
     color: rgb(255, 255, 255);
+}
+
+.languageName {
+	display: block;
+	color: #333333;
+	text-decoration: none;
+}
+
+.languageName:hover:not(.text-muted) {
+	color: #ffffff;
+	background-color: #446e9b;
+	cursor: pointer;
+	text-decoration: underline;
+}
+
+#srcLanguages {
+	font-size: 14px;
+	min-width: 500px;
+	left: 81%;
+	text-align: center;
+}
+
+#dstLanguages {
+	font-size: 14px;
+	min-width: 500px;
+	left: -520%;
+	text-align: center;
 }
