--- a/trunk/apertium-tools/apertium-html-tools/assets/css/style.css
+++ b/trunk/apertium-tools/apertium-html-tools/assets/css/style.css
@@ -1,7 +1,3 @@
-.left-part {
-    text-align: right;
-}
-
 #loading-indicator {
     display: none;
     z-index: 10000;
@@ -23,6 +19,13 @@
 
 .tagline {
     color: rgb(255, 255, 255);
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.nav li a {
+	font-size: 17px;
+    font-weight: 600;
 }
 
 .languageName {
