Emphasize that translation not available in html-tools

--- a/apertium-tools/apertium-html-tools/assets/css/style.css
+++ b/apertium-tools/apertium-html-tools/assets/css/style.css
@@ -2,6 +2,10 @@ h2 {
     margin-top: 0px;
 }
 
+.notAvailable {
+    color: #b94a48;
+}
+
 #loading-indicator {
     display: none;
     z-index: 10000;
