Modify style of disbled language buttons Prevent language without pairs from appearing in detection results Make detect button display correct text upon refresh Minor style fixes

--- a/apertium-tools/apertium-html-tools/assets/css/style.css
+++ b/apertium-tools/apertium-html-tools/assets/css/style.css
@@ -86,6 +86,11 @@ h2 {
     text-align: center;
 }
 
+button.disabledLang {
+    color: gray !important;
+    opacity: 1 !important;
+}
+
 /* Analysis */
 
 .noAnalysis {
