--- a/trunk/apertium-tools/apertium-html-tools/assets/css/style.css
+++ b/trunk/apertium-tools/apertium-html-tools/assets/css/style.css
@@ -102,3 +102,21 @@ button.disabledLang {
 div.unit {
     margin-left: 30px;
 }
+
+/* No JS Banner */
+#noscript {
+    position: fixed;
+    top: 5px;
+    right: 0px;
+    width: 100%;
+    text-align: center;
+    z-index: 10000000000000;
+}
+
+.navbar {
+    margin-top: 4em; 
+}
+
+body > .container {
+    margin-top: 4em; 
+}
